--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,14 @@
     <artifactId>cucumber-java</artifactId>
     <version>4.2.0</version>
 </dependency>
+
+<!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+<dependency>
+    <groupId>io.github.bonigarcia</groupId>
+    <artifactId>webdrivermanager</artifactId>
+    <version>4.0.0</version>
+</dependency>
+
 <dependency>
     <groupId>io.cucumber</groupId>
     <artifactId>cucumber-junit</artifactId>
